--- a/specimen.html
+++ b/specimen.html
@@ -14,41 +14,16 @@
 <h1>Digital Type Specimen</h1>
 <h3> "Typeface: Fraunces" </h3>
 
-<div class="row">
-  <div class="column">
-<img src="specimen1.jpg" alt="photo of specimen part 1" width=286 height =357>
-<div class="row">
-  <div class="column">
-<img src="specimen2.jpg" alt="photo of specimen part 2" width=286 height =357>
-<div class="row">
-  <div class="column">
-<img src="specimen3.jpg" alt="photo of specimen part 3" width=286 height =357>
-<div class="row">
-  <div class="column">
-<img src="specimen4.jpg" alt="photo of specimen part 4" width=286 height =357>
-<div class="row">
-  <div class="column">
-<img src="specimen5.jpg" alt="photo of specimen part 5" width=286 height =357>
-<div class="row">
-  <div class="column">
-<img src="specimen6.jpg" alt="photo of specimen part 6" width=286 height =357>
-<div class="row">
-  <div class="column">
-<img src="specimen7.jpg" alt="photo of specimen part 7" width=286 height =357>
-<div class="row">
-  <div class="column">
-<img src="specimen8.jpg" alt="photo of specimen part 8" width=286 height =357>
-<div class="row">
-  <div class="column">
-<img src="specimen9.jpg" alt="photo of specimen part 9" width=286 height =357 class="center">
-<div class="row">
-  <div class="column">
-<img src="specimen10.jpg" alt="photo of specimen part 10" width=286 height =357 class="center">
-</body>
-</html>
-  </div>
+<div class="grid-container">
+  <div class="grid-item"><img src="specimen1.jpg" alt="photo of specimen part 1" width=286 height =357></div>
+  <div class="grid-item"><img src="specimen2.jpg" alt="photo of specimen part 2" width=286 height =357></div>
+  <div class="grid-item"><img src="specimen3.jpg" alt="photo of specimen part 3" width=286 height =357></div>
+  <div class="grid-item"><img src="specimen4.jpg" alt="photo of specimen part 4" width=286 height =357></div>
+  <div class="grid-item"><img src="specimen5.jpg" alt="photo of specimen part 5" width=286 height =357></div>
+  <div class="grid-item"><img src="specimen6.jpg" alt="photo of specimen part 6" width=286 height =357></div>
+  <div class="grid-item"><img src="specimen7.jpg" alt="photo of specimen part 7" width=286 height =357></div>
+  <div class="grid-item"><img src="specimen8.jpg" alt="photo of specimen part 8" width=286 height =357></div>
+  <div class="grid-item"><img src="specimen9.jpg" alt="photo of specimen part 9" width=286 height =357></div>
+  <div class="grid-item"></div>
+  <div class="grid-item"><img src="specimen10.jpg" alt="photo of specimen part 10" width=286 height =357></div>
 </div>
-
-grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto auto auto;
